ver2 with env var

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
+server.port=80
 app.poolSize=10
 
 #redmine db
-spring.datasource.url=${DB_REDMINE_URL}
-#spring.datasource.url=${DB_REDMINE_URL_LOCAL}
+#spring.datasource.url=${DB_REDMINE_URL}
+spring.datasource.url=${DB_REDMINE_URL_LOCAL}
 spring.datasource.username=${DB_REDMINE_USERNAME}
 spring.datasource.password=${DB_REDMINE_PASSWORD}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 #crm db
-spring.datasource2.url=${DB_CRM_URL}
-#spring.datasource2.url=${DB_CRM_URL_LOCAL}
+#spring.datasource2.url=${DB_CRM_URL}
+spring.datasource2.url=${DB_CRM_URL_LOCAL}
 spring.datasource2.username=${DB_CRM_USERNAME}
 spring.datasource2.password=${DB_CRM_PASSWORD}
 spring.datasource2.driverClassName=com.mysql.cj.jdbc.Driver
@@ -21,7 +22,8 @@ spring.datasource3.password=${DB_SD_PASSWORD}
 spring.datasource3.driverClassName=com.mysql.cj.jdbc.Driver
 
 #dashboard db
-spring.datasource4.url=${DB_DASHBOARD_URL}
+#spring.datasource4.url=jdbc:h2:file:./src/main/resources/db/dashboard
+spring.datasource4.url=jdbc:h2:file:./db/dashboard
 spring.datasource4.username=${DB_DASHBOARD_USERNAME}
 spring.datasource4.password=${DB_DASHBOARD_PASSWORD}
 spring.datasource4.driverClassName=org.h2.Driver
