web-allow-others set true

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.datasource4.username=${DB_DASHBOARD_USERNAME}
 spring.datasource4.password=${DB_DASHBOARD_PASSWORD}
 spring.datasource4.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 
